# learn_opengl

./: .gitignore
basic/camera/: CMakeLists.txt  camera.cpp  camera.h  shader.frag  shader.h  shader.vert  stb_image.h  triangle_camera.cpp
basic/coordinate/: CMakeLists.txt  triangle_coordinate.cpp
basic/create_window/: CMakeLists.txt  create_window.cpp
basic/texture/: CMakeLists.txt  triangle_texture.cpp
basic/transform/: CMakeLists.txt  triangle_transform.cpp
basic/triangle/: CMakeLists.txt  readme.md  triangle.cpp  triangle_ebo.cpp  triangle_shader_communicate.cpp  triangle_uniform.cpp  triangle_vao.cpp  triangle_vertex_color.cpp
basic/triangle_point/: CMakeLists.txt  triangle_vertex_color.cpp
illumination/basic_lighting/: CMakeLists.txt  light.cpp  light_shader.frag  shader.frag  shader.vert
illumination/color/: CMakeLists.txt  color.cpp  glad.c  light_shader.frag  light_shader.vert  shader.frag  shader.vert
illumination/material/: CMakeLists.txt  light_shader.vert  material.cpp  shader.frag
test_glm/: CMakeLists.txt  test_glm.cpp
